# Employer-Recommendation-System

./: README.md  main.py  pyproject.toml  requirements.txt
employer_recommendation_system/accounts/: models.py  serializers.py  urls.py  utils.py  views.py
employer_recommendation_system/api/: urls.py
employer_recommendation_system/backup/: CompanyForm.js  JobForm.js  LoginForm.js  RegistrationForm.js  RegistrationStepper.js
employer_recommendation_system/common/: fields.py  models.py  permissions.py  utils.py
employer_recommendation_system/emp/: admin.py  filters.py  helper.py  managers.py  mixins.py  models.py  permissions.py  serializer.py  serializers.py  urls.py  utility.py  utils.py  views.py
employer_recommendation_system/employer/: serializers.py  urls.py  views.py
employer_recommendation_system/employer_recommendation_system/: celery.py  settings.py  urls.py
employer_recommendation_system/events/: admin.py  filters.py  helper.py  models.py  serializers.py  urls.py  views.py
employer_recommendation_system/filters/: models.py
employer_recommendation_system/mailer/: admin.py  models.py  tasks.py  utils.py  views.py
employer_recommendation_system/moodle/: models.py
employer_recommendation_system/requests/: registration.rest
employer_recommendation_system/spoken/: backends.py  helper.py  utility.py
employer_recommendation_system/users/: urls.py  views.py
frontend/: .env.development  .env.production  .eslintrc.cjs  .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.paths.json  vite.config.ts
(+340 files in other folders)
