[project]
name = "employer-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.3.4",
    "django==3.2.19",
    "django-ckeditor==5.8.0",
    "django-cors-headers>=4.3.0",
    "django-crispy-forms==1.11.2",
    "django-crontab==0.7.1",
    "django-dbbackup==3.3.0",
    "django-filter==2.4.0",
    "django-js-asset==1.2.2",
    "djangorestframework>=3.15.1",
    "djangorestframework-simplejwt>=5.3.1",
    "extras==1.0.0",
    "gunicorn>=23.0.0",
    "mysqlclient==2.0.3",
    "numpy==1.22.0",
    "openpyxl>=3.1.5",
    "pandas>=1.5.1",
    "pillow==9.3.0",
    "python-dateutil==2.8.1",
    "pytz==2021.1",
    "six==1.16.0",
    "sqlparse==0.4.4",
    "typing-extensions==3.10.0.0",
]
